--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "vue": "^3.0.11",
         "vue-router": "^4.0.8",
+        "vuetify": "^3.0.0-alpha.5",
         "vuex": "^4.0.1"
     }
 }
