--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@vue/compiler-sfc": "^3.0.11",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "ts-loader": "^9.2.3",
+        "typescript": "^4.3.2",
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
         "vue": "^3.0.11",
         "vue-router": "^4.0.8",
-        "vuetify": "^3.0.0-alpha.5",
         "vuex": "^4.0.1"
     }
 }
