--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.14.5",
         "@types/axios": "^0.14.0",
-        "@vue/compiler-sfc": "^3.0.11",
+        "@types/react": "^17.0.11",
+        "@types/react-dom": "^17.0.8",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "ts-loader": "^9.2.3",
-        "typescript": "^4.3.2",
-        "vue-loader": "^16.2.0"
+        "typescript": "^4.3.2"
     },
     "dependencies": {
-        "vue": "^3.0.11",
-        "vue-router": "^4.0.8",
-        "vuex": "^4.0.1"
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     }
 }
