--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/axios": "^0.14.0",
         "@types/react": "^17.0.11",
         "@types/react-dom": "^17.0.8",
+        "@types/react-router-dom": "^5.1.7",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -25,6 +26,7 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0"
     }
 }
