--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.14.5",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-beta.0",
         "@types/axios": "^0.14.0",
         "@types/react": "^17.0.11",
         "@types/react-dom": "^17.0.8",
@@ -19,6 +20,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "react-refresh": "^0.10.0",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.2"
     },
